# blog-application-django

./: .gitignore  pyproject.toml
mysite/blog/: admin.py  models.py  urls.py  views.py
mysite/blog/templates/blog/post/: list.html
src/blog/: forms.py  models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
src/blog/templates/: pagination.html
src/blog/templates/blog/post/: list.html  share.html
src/mysite/: settings.py  urls.py
